container-ops/kubernetes/ingress/src/nginx_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-first-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my.application.com
    http:
      paths:
        - path: /a
          pathType: prefix
          backend:
            serviceName: service-a
            servicePort: 80
        - path: /b
          pathType: prefix
          backend:
            serviceName: service-b
            servicePort: 80
